add authentication pages and configure routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,22 +26,11 @@
 <body>
     <main class="main" id="top">
         <div class="container-fluid px-0">
-            <!-- Vertical Navbar -->
-            {{> vertical_nav}}
-            <!-- Top Navbar -->
-            {{> top_nav}}
-            <!-- Main Content -->
-            <div class="content pt-5">
                 {{!-- Page Content --}}
                 {{{ body }}}
-                <!-- Footer -->
-                <footer class="footer">
-                    {{> footer}}
-                </footer>
-            </div>
         </div>
     </main>
-    <script src="/js/phoenix.js"></script>
-    <script src="/js/ecommerce-dashboard.js"></script>
+    <script src="/js/blockdust.js"></script>
+    <script src="/js/dashboard.js"></script>
 </body>
 </html>
