--- a/views/partials/top_nav.handlebars
+++ b/views/partials/top_nav.handlebars
@@ -13,7 +13,7 @@
           <span class="toggle-line"></span>
         </span>
       </button>
-      <a class="navbar-brand me-1 me-sm-3" href="index.html">
+      <a class="navbar-brand me-1 me-sm-3" href="/">
         <div class="d-flex align-items-center">
           <div class="d-flex align-items-center">
             <img src="/img/icons/logo.png" alt="phoenix" width="32" />
