--- a/views/partials/vertical_nav.handlebars
+++ b/views/partials/vertical_nav.handlebars
@@ -5,7 +5,7 @@
       <div class="navbar-vertical-content scrollbar">
         <ul class="navbar-nav flex-column" id="navbarVerticalNav">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">
+            <a class="nav-link active" href="/dashboard">
               <div class="d-flex align-items-center">
                 <span class="nav-link-icon">
                   <span data-feather="cast"></span>
@@ -22,7 +22,7 @@
             </p>
             <a
               class="nav-link"
-              href="pages/starter.html"
+              href="/"
               role="button"
               data-bs-toggle=""
               aria-expanded="false"
@@ -60,7 +60,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="pages/authentication/simple/sign-in.html"
+                  href="authentication/sign-in"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
@@ -74,7 +74,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="pages/authentication/simple/sign-up.html"
+                  href="authentication/sign-up"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
@@ -88,7 +88,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="pages/authentication/simple/sign-out.html"
+                  href="/authentication/sign-out"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
@@ -102,7 +102,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="pages/authentication/simple/forgot-password.html"
+                  href="/authentication/forgot-password"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
@@ -116,7 +116,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="pages/authentication/simple/reset-password.html"
+                  href="authentication/reset-password"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
@@ -130,7 +130,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="pages/authentication/simple/lock-screen.html"
+                  href="authentication/lock-screen"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
