add prettier config/ignore

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -22,8 +22,9 @@
   {{! <!-- Posts Component --> }}
   <div class="mx-n6 bg-white px-6 pt-7 border-y border-300">
     <div class="row">
+      {{!-- prettier-ignore --}}
       <div
-        data-list="{"valueNames":["title","user","comments","post","time"],"page":6}"
+        data-list='{"valueNames":["title","user","comments","post","time"],"page":6}'
       >
         {{! Posts Header }}
         <div class="row align-items-end justify-content-between pb-5 g-3">
