redirect dashboard to auth-gate and space logo letters

--- a/views/partials/top_nav.handlebars
+++ b/views/partials/top_nav.handlebars
@@ -17,7 +17,7 @@
         <div class="d-flex align-items-center">
           <div class="d-flex align-items-center">
             <img src="/img/icons/logo.png" alt="phoenix" width="32" />
-            <p class="logo-text ms-2 d-none d-sm-block" style="color: #00ffa3">
+            <p class="logo-text ms-2 d-none d-sm-block" style="color: #00ffa3; letter-spacing: .04rem;">
               Block Dust
             </p>
           </div>
@@ -312,7 +312,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link px-3" href="#!">
+                    <a class="nav-link px-3" href="/dashboard">
                       <span
                         class="me-2 text-900"
                         data-feather="pie-chart"
@@ -368,7 +368,7 @@
                 <div class="px-3">
                   <a
                     class="btn btn-phoenix-secondary d-flex flex-center w-100"
-                    href="#!"
+                    href="/authentication/sign-out"
                   >
                     <span class="me-2" data-feather="log-out"></span>
                     Sign out
