--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,10 +10,10 @@
     <div class="row g-5">
       <div class="col-12 col-xxl-6">
         <h2 class="mb-2">
-          Block Dust Dashboard
+          Blockdust Dashboard
         </h2>
         <h5 class="text-700 fw-semi-bold">
-          Welcome to your personal Block Dust post manager
+          Welcome to your personal Blockdust post manager
         </h5>
       </div>
     </div>
