--- a/views/forgot-password.handlebars
+++ b/views/forgot-password.handlebars
@@ -8,7 +8,7 @@
         <div class="d-flex align-items-center">
           <img
             src="/img/icons/logo.png"
-            alt="blockdust"
+            alt="Blockdust"
             width="58"
           />
         </div>
