--- a/views/partials/top_nav.handlebars
+++ b/views/partials/top_nav.handlebars
@@ -18,7 +18,7 @@
           <div class="d-flex align-items-center">
             <img src="/img/icons/logo.png" alt="phoenix" width="32" />
             <p class="logo-text ms-2 d-none d-sm-block" style="color: #00ffa3; letter-spacing: .04rem;">
-              Block Dust
+              Blockdust
             </p>
           </div>
         </div>
