--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -5,6 +5,459 @@
 
 {{! <!-- Main Content --> }}
 <div class="content pt-5">
+
+  {{! <!-- Page Header --> }}
+  <div class="pb-5">
+    <div class="row g-5">
+      <div class="col-12 col-xxl-6">
+        <h2 class="mb-2">
+          Feed
+        </h2>
+        <h5 class="text-700 fw-semi-bold">
+            Explore user entries across the Blockdust ecosystem
+        </h5>
+      </div>
+    </div>
+  </div>
+
+  {{! <!-- Posts Component --> }}
+  <div class="mx-n6 bg-white px-6 pt-7 border-y border-300">
+    <div class="row">
+      {{!-- prettier-ignore --}}
+      <div
+        data-list='{"valueNames":["title","user","comments","post","time"],"page":6}'
+      >
+        {{! Posts Header }}
+        <div class="row align-items-end justify-content-between pb-5 g-3">
+          <div class="col-auto">
+            <h3>
+              Your Posts
+            </h3>
+            <p class="text-700 lh-sm mb-0">
+              View your all-time blog posts by various categories
+            </p>
+          </div>
+          <!-- Search form -->
+          <div class="col-12 col-md-auto">
+            <div class="row g-2">
+              <div class="col-auto flex-1">
+                <div class="search-box">
+                  <form
+                    class="position-relative"
+                    data-bs-toggle="search"
+                    data-bs-display="static"
+                  >
+                    <input
+                      class="form-control form-control-sm search-input search"
+                      type="search"
+                      placeholder="Search"
+                      aria-label="Search"
+                    />
+                    <span class="fas fa-search search-box-icon"></span>
+                  </form>
+                </div>
+              </div>
+              <div class="col-auto">
+                <button
+                  class="btn btn-sm btn-phoenix-secondary bg-white hover-bg-100"
+                  type="button"
+                >
+                  All posts
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        {{! Posts Table }}
+        <div class="table-responsive mx-n1 px-1 scrollbar">
+          <table class="table fs--2 mb-0 overflow-hidden">
+            <thead>
+              <tr>
+                <th
+                  class="sort border-top white-space-nowrap align-middle"
+                  scope="col"
+                  style="min-width:360px;"
+                  data-sort="title"
+                >
+                  TITLE
+                </th>
+                <th
+                  class="sort border-top align-middle"
+                  scope="col"
+                  data-sort="user"
+                  style="min-width:200px;"
+                >
+                  USER
+                </th>
+                <th
+                  class="sort border-top align-middle"
+                  scope="col"
+                  data-sort="comments"
+                  style="min-width:110px;"
+                >
+                  COMMENTS
+                </th>
+                <th
+                  class="sort border-top align-middle"
+                  scope="col"
+                  style="max-width:350px;"
+                  data-sort="post"
+                >
+                  POST
+                </th>
+                <th
+                  class="sort border-top text-end align-middle"
+                  scope="col"
+                  data-sort="time"
+                >
+                  TIME
+                </th>
+                <th
+                  class="sort border-top text-end pe-0 align-middle"
+                  scope="col"
+                >
+                  ACTION
+                </th>
+              </tr>
+            </thead>
+            <tbody class="list" id="table-latest-post-body">
+              <!-- Sample Post 1 -->
+              <tr
+                class="hover-actions-trigger btn-reveal-trigger position-static"
+              >
+                <td
+                  class="align-middle title white-space-nowrap"
+                  style="min-width:360px;"
+                >
+                  <h6 class="fw-semi-bold mb-0">
+                    Fitbit Sense Advanced Smartwatch with Tools
+                  </h6>
+                </td>
+                <td
+                  class="align-middle user white-space-nowrap"
+                  style="min-width:200px;"
+                >
+                  <div class="d-flex align-items-center">
+                    <div class="avatar avatar-l">
+                      <div class="avatar-name rounded-circle">
+                        <span>
+                          R
+                        </span>
+                      </div>
+                    </div>
+                    <h6 class="mb-0 ms-3 text-900">
+                      Richard Dawkins
+                    </h6>
+                  </div>
+                </td>
+                <td
+                  class="align-middle comments white-space-nowrap"
+                  style="min-width:110px;"
+                >
+                  <span class="fa fa-star text-warning"></span>
+                  <span class="fa fa-star text-warning"></span>
+                  <span class="fa fa-star text-warning"></span>
+                  <span class="fa fa-star text-warning"></span>
+                  <span class="fa fa-star text-warning"></span>
+                </td>
+                <td
+                  class="align-middle post"
+                  style="min-width:350px;width:500px;"
+                >
+                  <p class="fs--1 fw-semi-bold text-1000 mb-0">
+                    Very helpful to get going with rapid prototype development. Great support via email when I asked question.
+                  </p>
+                </td>
+                <td class="align-middle text-end time white-space-nowrap">
+                  <div class="hover-hide">
+                    <h6 class="text-1000 mb-0">
+                      Just now
+                    </h6>
+                  </div>
+                </td>
+                <td class="align-middle white-space-nowrap text-end pe-0">
+                  <div class="position-relative">
+                    <div class="hover-actions">
+                      <button
+                        class="btn btn-sm btn-phoenix-secondary me-1 fs--2"
+                      >
+                        <span class="fas fa-check"></span>
+                      </button>
+                      <button class="btn btn-sm btn-phoenix-secondary fs--2">
+                        <span class="fas fa-trash"></span>
+                      </button>
+                    </div>
+                  </div>
+                  <div class="font-sans-serif btn-reveal-trigger">
+                    <button
+                      class="btn btn-link fs--2 text-600 btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal"
+                      type="button"
+                      data-bs-toggle="dropdown"
+                      data-boundary="window"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                      data-bs-reference="parent"
+                    >
+                      <span class="fas fa-ellipsis-h fs--2"></span>
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-end border py-2">
+                      <a class="dropdown-item" href="#!">
+                        View
+                      </a>
+                      <a class="dropdown-item" href="#!">
+                        Export
+                      </a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item text-danger" href="#!">
+                        Remove
+                      </a>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <!-- End of Sample Post 1 -->
+              <!-- Sample Post 2 -->
+              <tr
+                class="hover-actions-trigger btn-reveal-trigger position-static"
+              >
+                <td
+                  class="align-middle title white-space-nowrap"
+                  style="min-width:360px;"
+                >
+                  <h6 class="fw-semi-bold mb-0">
+                    iPhone 13 pro max-Pacific Blue-128GB storage
+                  </h6>
+                </td>
+                <td
+                  class="align-middle user white-space-nowrap"
+                  style="min-width:200px;"
+                >
+                  <div class="d-flex align-items-center">
+                    <div class="avatar avatar-l">
+                      <img
+                        class="rounded-circle"
+                        src="/img/team/59.png"
+                        alt=""
+                      />
+                    </div>
+                    <h6 class="mb-0 ms-3 text-900">
+                      Ashley Garrett
+                    </h6>
+                  </div>
+                </td>
+                <td
+                  class="align-middle comments white-space-nowrap"
+                  style="min-width:110px;"
+                >
+                  <span class="fa fa-star text-warning"></span>
+                  <span class="fa fa-star text-warning"></span>
+                  <span class="fa fa-star text-warning"></span>
+                  <span class="fa fa-star text-300"></span>
+                  <span class="fa fa-star text-300"></span>
+                </td>
+                <td
+                  class="align-middle post"
+                  style="min-width:350px;width:500px;"
+                >
+                  <p class="fs--1 fw-semi-bold text-1000 mb-0">
+                    This template has allowed me to convert my existing web app into a great looking, easy to use UI in less than 2 weeks
+                  </p>
+                </td>
+                <td class="align-middle text-end time white-space-nowrap">
+                  <div class="hover-hide">
+                    <h6 class="text-1000 mb-0">
+                      Just now
+                    </h6>
+                  </div>
+                </td>
+                <td class="align-middle white-space-nowrap text-end pe-0">
+                  <div class="position-relative">
+                    <div class="hover-actions">
+                      <button
+                        class="btn btn-sm btn-phoenix-secondary me-1 fs--2"
+                      >
+                        <span class="fas fa-check"></span>
+                      </button>
+                      <button class="btn btn-sm btn-phoenix-secondary fs--2">
+                        <span class="fas fa-trash"></span>
+                      </button>
+                    </div>
+                  </div>
+                  <div class="font-sans-serif btn-reveal-trigger">
+                    <button
+                      class="btn btn-link fs--2 text-600 btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal"
+                      type="button"
+                      data-bs-toggle="dropdown"
+                      data-boundary="window"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                      data-bs-reference="parent"
+                    >
+                      <span class="fas fa-ellipsis-h fs--2"></span>
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-end border py-2">
+                      <a class="dropdown-item" href="#!">
+                        View
+                      </a>
+                      <a class="dropdown-item" href="#!">
+                        Export
+                      </a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item text-danger" href="#!">
+                        Remove
+                      </a>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <!-- End of Sample Post 2 -->
+              <!-- Sample Post 3 -->
+              <tr
+                class="hover-actions-trigger btn-reveal-trigger position-static"
+              >
+                <td
+                  class="align-middle title white-space-nowrap"
+                  style="min-width:360px;"
+                >
+                  <h6 class="fw-semi-bold mb-0">
+                    Apple MacBook Pro 13 inch-M1-8/256GB-space
+                  </h6>
+                </td>
+                <td
+                  class="align-middle user white-space-nowrap"
+                  style="min-width:200px;"
+                >
+                  <div class="d-flex align-items-center">
+                    <div class="avatar avatar-l">
+                      <img
+                        class="rounded-circle"
+                        src="/img/team/58.png"
+                        alt=""
+                      />
+                    </div>
+                    <h6 class="mb-0 ms-3 text-900">
+                      Woodrow Burton
+                    </h6>
+                  </div>
+                </td>
+                <td
+                  class="align-middle comments white-space-nowrap"
+                  style="min-width:110px;"
+                >
+                  <span class="fa fa-star text-warning"></span>
+                  <span class="fa fa-star text-warning"></span>
+                  <span class="fa fa-star text-warning"></span>
+                  <span class="fa fa-star text-warning"></span>
+                  <span
+                    class="fa fa-star-half-alt text-warning star-icon"
+                  ></span>
+                </td>
+                <td
+                  class="align-middle post"
+                  style="min-width:350px;width:500px;"
+                >
+                  <p class="fs--1 fw-semi-bold text-1000 mb-0">
+                    I have started using this theme in the last week and it has really impressed me very much, the support is second to n...
+                    <a href="#!">
+                      See more
+                    </a>
+                  </p>
+                </td>
+                <td class="align-middle text-end time white-space-nowrap">
+                  <div class="hover-hide">
+                    <h6 class="text-1000 mb-0">
+                      Just now
+                    </h6>
+                  </div>
+                </td>
+                <td class="align-middle white-space-nowrap text-end pe-0">
+                  <div class="position-relative">
+                    <div class="hover-actions">
+                      <button
+                        class="btn btn-sm btn-phoenix-secondary me-1 fs--2"
+                      >
+                        <span class="fas fa-check"></span>
+                      </button>
+                      <button class="btn btn-sm btn-phoenix-secondary fs--2">
+                        <span class="fas fa-trash"></span>
+                      </button>
+                    </div>
+                  </div>
+                  <div class="font-sans-serif btn-reveal-trigger">
+                    <button
+                      class="btn btn-link fs--2 text-600 btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal"
+                      type="button"
+                      data-bs-toggle="dropdown"
+                      data-boundary="window"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                      data-bs-reference="parent"
+                    >
+                      <span class="fas fa-ellipsis-h fs--2"></span>
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-end border py-2">
+                      <a class="dropdown-item" href="#!">
+                        View
+                      </a>
+                      <a class="dropdown-item" href="#!">
+                        Export
+                      </a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item text-danger" href="#!">
+                        Remove
+                      </a>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <!-- End of Sample Post 3 -->
+            </tbody>
+          </table>
+        </div>
+        {{! Pagination }}
+        <div class="row align-items-center py-2">
+          <div class="pagination d-none"></div>
+          <div class="col d-flex fs--1">
+            <p
+              class="mb-0 d-none d-sm-block me-3 fw-semi-bold text-900"
+              data-list-info
+            ></p>
+            <a class="fw-semi-bold" href="#!" data-list-view="*">
+              View all
+              <span
+                class="fas fa-angle-right ms-1"
+                data-fa-transform="down-1"
+              ></span>
+            </a>
+            <a class="fw-semi-bold d-none" href="#!" data-list-view="less">
+              View Less
+            </a>
+          </div>
+          <div class="col-auto d-flex">
+            <button
+              class="btn btn-link px-1 me-1"
+              type="button"
+              title="Previous"
+              data-list-pagination="prev"
+            >
+              <span class="fas fa-chevron-left me-2"></span>
+              Previous
+            </button>
+            <button
+              class="btn btn-link px-1 ms-1"
+              type="button"
+              title="Next"
+              data-list-pagination="next"
+            >
+              Next
+              <span class="fas fa-chevron-right ms-2"></span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <footer class="footer">
         {{> footer}}
     </footer>
