--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block Dust</title>
+    <title>Blockdust</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
@@ -30,7 +30,7 @@
                 {{{ body }}}
         </div>
     </main>
-    <script src="/js/blockdust.js"></script>
+    <script src="/js/Blockdust.js"></script>
     <script src="/js/dashboard.js"></script>
 </body>
 </html>
