--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,7 +1,7 @@
   <div class="row g-0 justify-content-between align-items-center h-100 mb-3">
     <div class="col-12 col-sm-auto text-center">
       <p class="mb-0 text-900">
-        Thank you for using Block Dust
+        Thank you for using Blockdust
         <span class="d-none d-sm-inline-block">
           |
         </span>
