--- a/views/sign-out.handlebars
+++ b/views/sign-out.handlebars
@@ -12,7 +12,7 @@
           Come back soon!
         </h4>
         <p class="text-700">
-          Thanks for using Block Dust. You are now successfully signed out.
+          Thanks for using Blockdust. You are now successfully signed out.
         </p>
       </div>
       <a
