working sign-up form, begin auth-routes and calls to api

--- a/views/partials/vertical_nav.handlebars
+++ b/views/partials/vertical_nav.handlebars
@@ -88,7 +88,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="/authentication/sign-out"
+                  href="/api/logout"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
