working signout methodgit add .git add .git add .!

--- a/views/sign-in.handlebars
+++ b/views/sign-in.handlebars
@@ -36,7 +36,7 @@
           <div class="form-icon-container">
             <input
               class="form-control form-icon-input"
-              id="email"
+              id="email-login"
               type="email"
               placeholder="name@example.com"
             />
@@ -49,6 +49,7 @@
           </label>
           <div class="form-icon-container">
             <input
+              id="password-login"
               class="form-control form-icon-input"
               type="password"
               placeholder="Password"
@@ -91,4 +92,4 @@
     </div>
   </div>
 </div>
-<script src="/js/auth.js"></script>
+<script src="/js/login.js"></script>
