--- a/views/partials/vertical_nav.handlebars
+++ b/views/partials/vertical_nav.handlebars
@@ -87,8 +87,8 @@
               </li>
               <li class="nav-item">
                 <a
+                  href="/authentication/sign-out"
                   class="nav-link"
-                  href="/api/logout"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
