differentiate feed and add landing page

--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -5,21 +5,6 @@
 
 {{! <!-- Main Content --> }}
 <div class="content pt-5">
-
-  {{! <!-- Page Header --> }}
-  <div class="pb-5">
-    <div class="row g-5">
-      <div class="col-12 col-xxl-6">
-        <h2 class="mb-2">
-          Feed
-        </h2>
-        <h5 class="text-700 fw-semi-bold">
-            Explore user entries across the Blockdust ecosystem
-        </h5>
-      </div>
-    </div>
-  </div>
-
   {{! <!-- Posts Component --> }}
   <div class="mx-n6 bg-white px-6 pt-7 border-y border-300">
     <div class="row">
@@ -31,10 +16,10 @@
         <div class="row align-items-end justify-content-between pb-5 g-3">
           <div class="col-auto">
             <h3>
-              Your Posts
+              Feed
             </h3>
             <p class="text-700 lh-sm mb-0">
-              View your all-time blog posts by various categories
+              Explore user entries across the entire Blockdust ecosystem
             </p>
           </div>
           <!-- Search form -->
@@ -112,12 +97,6 @@
                 >
                   TIME
                 </th>
-                <th
-                  class="sort border-top text-end pe-0 align-middle"
-                  scope="col"
-                >
-                  ACTION
-                </th>
               </tr>
             </thead>
             <tbody class="list" id="table-latest-post-body">
@@ -125,6 +104,7 @@
               <tr
                 class="hover-actions-trigger btn-reveal-trigger position-static"
               >
+              {{!-- TITLE --}}
                 <td
                   class="align-middle title white-space-nowrap"
                   style="min-width:360px;"
@@ -133,6 +113,7 @@
                     Fitbit Sense Advanced Smartwatch with Tools
                   </h6>
                 </td>
+                {{!-- USER --}}
                 <td
                   class="align-middle user white-space-nowrap"
                   style="min-width:200px;"
@@ -150,16 +131,15 @@
                     </h6>
                   </div>
                 </td>
+                {{!-- COMMENTS --}}
                 <td
                   class="align-middle comments white-space-nowrap"
                   style="min-width:110px;"
                 >
-                  <span class="fa fa-star text-warning"></span>
-                  <span class="fa fa-star text-warning"></span>
-                  <span class="fa fa-star text-warning"></span>
-                  <span class="fa fa-star text-warning"></span>
-                  <span class="fa fa-star text-warning"></span>
+                  <span class="fa fa-comments text-success"></span>
+                  0 Comments
                 </td>
+                {{!-- POST --}}
                 <td
                   class="align-middle post"
                   style="min-width:350px;width:500px;"
@@ -168,50 +148,12 @@
                     Very helpful to get going with rapid prototype development. Great support via email when I asked question.
                   </p>
                 </td>
+                {{!-- TIME --}}
                 <td class="align-middle text-end time white-space-nowrap">
-                  <div class="hover-hide">
+                  <div>
                     <h6 class="text-1000 mb-0">
                       Just now
                     </h6>
-                  </div>
-                </td>
-                <td class="align-middle white-space-nowrap text-end pe-0">
-                  <div class="position-relative">
-                    <div class="hover-actions">
-                      <button
-                        class="btn btn-sm btn-phoenix-secondary me-1 fs--2"
-                      >
-                        <span class="fas fa-check"></span>
-                      </button>
-                      <button class="btn btn-sm btn-phoenix-secondary fs--2">
-                        <span class="fas fa-trash"></span>
-                      </button>
-                    </div>
-                  </div>
-                  <div class="font-sans-serif btn-reveal-trigger">
-                    <button
-                      class="btn btn-link fs--2 text-600 btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal"
-                      type="button"
-                      data-bs-toggle="dropdown"
-                      data-boundary="window"
-                      aria-haspopup="true"
-                      aria-expanded="false"
-                      data-bs-reference="parent"
-                    >
-                      <span class="fas fa-ellipsis-h fs--2"></span>
-                    </button>
-                    <div class="dropdown-menu dropdown-menu-end border py-2">
-                      <a class="dropdown-item" href="#!">
-                        View
-                      </a>
-                      <a class="dropdown-item" href="#!">
-                        Export
-                      </a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item text-danger" href="#!">
-                        Remove
-                      </a>
-                    </div>
                   </div>
                 </td>
               </tr>
@@ -220,6 +162,7 @@
               <tr
                 class="hover-actions-trigger btn-reveal-trigger position-static"
               >
+                {{!-- TITLE --}}
                 <td
                   class="align-middle title white-space-nowrap"
                   style="min-width:360px;"
@@ -228,6 +171,7 @@
                     iPhone 13 pro max-Pacific Blue-128GB storage
                   </h6>
                 </td>
+                {{!-- USER --}}
                 <td
                   class="align-middle user white-space-nowrap"
                   style="min-width:200px;"
@@ -245,16 +189,15 @@
                     </h6>
                   </div>
                 </td>
+                {{!-- COMMENTS --}}
                 <td
                   class="align-middle comments white-space-nowrap"
                   style="min-width:110px;"
                 >
-                  <span class="fa fa-star text-warning"></span>
-                  <span class="fa fa-star text-warning"></span>
-                  <span class="fa fa-star text-warning"></span>
-                  <span class="fa fa-star text-300"></span>
-                  <span class="fa fa-star text-300"></span>
+                  <span class="fa fa-comments text-dark"></span>
+                  0 Comments
                 </td>
+                {{!-- POST --}}
                 <td
                   class="align-middle post"
                   style="min-width:350px;width:500px;"
@@ -263,50 +206,12 @@
                     This template has allowed me to convert my existing web app into a great looking, easy to use UI in less than 2 weeks
                   </p>
                 </td>
+                {{!-- TIME --}}
                 <td class="align-middle text-end time white-space-nowrap">
-                  <div class="hover-hide">
+                  <div>
                     <h6 class="text-1000 mb-0">
                       Just now
                     </h6>
-                  </div>
-                </td>
-                <td class="align-middle white-space-nowrap text-end pe-0">
-                  <div class="position-relative">
-                    <div class="hover-actions">
-                      <button
-                        class="btn btn-sm btn-phoenix-secondary me-1 fs--2"
-                      >
-                        <span class="fas fa-check"></span>
-                      </button>
-                      <button class="btn btn-sm btn-phoenix-secondary fs--2">
-                        <span class="fas fa-trash"></span>
-                      </button>
-                    </div>
-                  </div>
-                  <div class="font-sans-serif btn-reveal-trigger">
-                    <button
-                      class="btn btn-link fs--2 text-600 btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal"
-                      type="button"
-                      data-bs-toggle="dropdown"
-                      data-boundary="window"
-                      aria-haspopup="true"
-                      aria-expanded="false"
-                      data-bs-reference="parent"
-                    >
-                      <span class="fas fa-ellipsis-h fs--2"></span>
-                    </button>
-                    <div class="dropdown-menu dropdown-menu-end border py-2">
-                      <a class="dropdown-item" href="#!">
-                        View
-                      </a>
-                      <a class="dropdown-item" href="#!">
-                        Export
-                      </a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item text-danger" href="#!">
-                        Remove
-                      </a>
-                    </div>
                   </div>
                 </td>
               </tr>
@@ -315,6 +220,7 @@
               <tr
                 class="hover-actions-trigger btn-reveal-trigger position-static"
               >
+              {{!-- TITLE --}}
                 <td
                   class="align-middle title white-space-nowrap"
                   style="min-width:360px;"
@@ -323,6 +229,8 @@
                     Apple MacBook Pro 13 inch-M1-8/256GB-space
                   </h6>
                 </td>
+
+                {{!-- USER --}}
                 <td
                   class="align-middle user white-space-nowrap"
                   style="min-width:200px;"
@@ -340,18 +248,17 @@
                     </h6>
                   </div>
                 </td>
+
+                {{!-- COMMENTS --}}
                 <td
                   class="align-middle comments white-space-nowrap"
                   style="min-width:110px;"
                 >
-                  <span class="fa fa-star text-warning"></span>
-                  <span class="fa fa-star text-warning"></span>
-                  <span class="fa fa-star text-warning"></span>
-                  <span class="fa fa-star text-warning"></span>
-                  <span
-                    class="fa fa-star-half-alt text-warning star-icon"
-                  ></span>
+                  <span class="fa fa-comments text-danger"></span>
+                  0 Comments
                 </td>
+
+                {{!-- POST --}}
                 <td
                   class="align-middle post"
                   style="min-width:350px;width:500px;"
@@ -363,50 +270,13 @@
                     </a>
                   </p>
                 </td>
+
+                {{!-- TIME --}}
                 <td class="align-middle text-end time white-space-nowrap">
-                  <div class="hover-hide">
+                  <div>
                     <h6 class="text-1000 mb-0">
                       Just now
                     </h6>
-                  </div>
-                </td>
-                <td class="align-middle white-space-nowrap text-end pe-0">
-                  <div class="position-relative">
-                    <div class="hover-actions">
-                      <button
-                        class="btn btn-sm btn-phoenix-secondary me-1 fs--2"
-                      >
-                        <span class="fas fa-check"></span>
-                      </button>
-                      <button class="btn btn-sm btn-phoenix-secondary fs--2">
-                        <span class="fas fa-trash"></span>
-                      </button>
-                    </div>
-                  </div>
-                  <div class="font-sans-serif btn-reveal-trigger">
-                    <button
-                      class="btn btn-link fs--2 text-600 btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal"
-                      type="button"
-                      data-bs-toggle="dropdown"
-                      data-boundary="window"
-                      aria-haspopup="true"
-                      aria-expanded="false"
-                      data-bs-reference="parent"
-                    >
-                      <span class="fas fa-ellipsis-h fs--2"></span>
-                    </button>
-                    <div class="dropdown-menu dropdown-menu-end border py-2">
-                      <a class="dropdown-item" href="#!">
-                        View
-                      </a>
-                      <a class="dropdown-item" href="#!">
-                        Export
-                      </a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item text-danger" href="#!">
-                        Remove
-                      </a>
-                    </div>
                   </div>
                 </td>
               </tr>
