--- a/views/sign-out.handlebars
+++ b/views/sign-out.handlebars
@@ -4,9 +4,8 @@
       <div class="text-center mb-6">
         <img
           class="mb-7"
-          src="/img/icons/logo.png"
+          src="/img/spot-illustrations/3.svg"
           alt="block-dust"
-          width="72"
         />
         <h4>
           Come back soon!
