--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -34,6 +34,7 @@
             Username
           </label>
           <input
+            autocomplete="username"
             class="form-control"
             id="username-signup"
             placeholder="Username"
@@ -44,6 +45,7 @@
             Email address
           </label>
           <input
+            autocomplete="email"
             class="form-control"
             id="email-signup"
             type="email"
@@ -58,7 +60,7 @@
             class="form-control form-icon-input"
             type="password"
             id="password-signup"
-            autocomplete="current-password"
+            autocomplete="new-password"
             placeholder="Password"
           />
         </div>
