--- a/views/sign-in.handlebars
+++ b/views/sign-in.handlebars
@@ -35,6 +35,7 @@
           </label>
           <div class="form-icon-container">
             <input
+              autocomplete="email"
               class="form-control form-icon-input"
               id="email-login"
               type="email"
@@ -49,6 +50,7 @@
           </label>
           <div class="form-icon-container">
             <input
+              autocomplete="current-password"
               id="password-login"
               class="form-control form-icon-input"
               type="password"
